--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "developer social links",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "node server.js",
+    "server": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
